--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-zipit.sh
-
-#VScode stuff
-CA.code-workspace
+#windows
+Desktop.ini
 
 #npm stuff
 node_modules/
 
-# Folder config file
-Desktop.ini
+# node
 package-lock.json
+
+#jquery
 css/jquery/
-images/vector/
-build.sh
+
+#design stuff
+*.afdesign
