--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,7 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "test",
+            "name": "test boredom",
             "file": "test/test-boredom.html"
         }
     ]
