--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,52 +20,7 @@
     "globals": {
         "$": "readonly",
         "bean": "readonly",
-        "CAException": "readonly",
-        "cBrowser": "readonly",
-        "cCAActionEvent": "readonly",
-        "cCACanvasEvent": "readonly",
-        "cCACell": "readonly",
-        "cCACellTypes": "readonly",
-        "cCACryptEvent": "readonly",
-        "cCACryptTypes": "readonly",
-        "cCAEvent": "readonly",
-        "cCAEventHelper": "readonly",
-        "cCAGeneralEvent": "readonly",
-        "cCAGrid": "readonly",
-        "cCAGridEvent": "readonly",
-        "cCAGridInitialiser": "readonly",
-        "cCAGridJSONExporter": "readonly",
-        "cCAGridJSONImporter": "readonly",
-        "cCAGridTypes": "readonly",
-        "cCAGridCell": "readonly",
-        "cCALexicon": "readonly",
-        "cCaIdentityRule": "readonly",
-        "cCAIndexOps": "readonly",
-        "cCAModifierTypes": "readonly",
-        "cCaRandomRule": "readonly",
-        "cCARuleBase64Exporter": "readonly",
-        "cCARuleRepeatBase64Importer": "readonly",
-        "cCARule": "readonly",
-        "cCARuleLifeImporter": "readonly",
-        "cCARuleBase64Importer": "readonly",
-        "cCARuleWolfram1DImporter": "readonly",
-        "cCARuleEvent": "readonly",
-        "cCARuleModifier": "readonly",
-        "cCARuleObjExporter": "readonly",
-        "cCARuleObjImporter": "readonly",
-        "cCARuleTypes": "readonly",
-        "cCAScrambler": "readonly",
-        "cCAScramblerEvent": "readonly",
-        "cSimpleBase64": "readonly",
-        "cCommon": "readonly",
-        "cConverterEncodings": "readonly",
-        "cDebug": "readonly",
-        "cHttp2": "readonly",
-        "cHttpQueue": "readonly",
-        "cHttpQueueItem": "readonly",
-        "cJquery": "readonly",
-        "cSparseArray": "readonly",
-        "google": "readonly",
-        "md5": "readonly"
+        "md5": "readonly",
+        "google": "readonly"
     }
 }
