simplify events and longer prettier line lengths

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "none",
-    "checkJs": false,
+    "checkJs": true,
     "allowJs": true,
     "baseUrl": "."
   },
